fix mrs left outer bracket being clipped

--- a/demo/demo.css
+++ b/demo/demo.css
@@ -62,7 +62,7 @@
 
 .tools {
     position: absolute;
-    right: 0;
+    right: 5px;
 }
 
 .save .icon {
